<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="@color/gv_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/gv_text_primary"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_search_bar"
        android:hint="@string/login_hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/gv_text_primary"
        android:textColorHint="@color/gv_text_hint"
        android:padding="16dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_search_bar"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:textColor="@color/gv_text_primary"
        android:textColorHint="@color/gv_text_hint"
        android:padding="16dp"
        android:layout_marginBottom="24dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login_btn_send"
            android:backgroundTint="@color/gv_red_glow"
            app:cornerRadius="12dp" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Sign Up"
        android:textColor="@color/gv_text_primary"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot your password?"
        android:textColor="@color/gv_text_hint"
        android:layout_marginTop="16dp"
        android:textSize="14sp" />

</LinearLayout>